src/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TotalQuantity__c</fullName>
        <description>The total quantity is Quantity + Asset Quantity</description>
        <inlineHelpText>The total quantity is Quantity + Asset Quantity</inlineHelpText>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TransferPriceLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line Item from collaborators cart from which transfer prices was received for this line item</description>
        <inlineHelpText>Line Item from collaborators cart from which transfer prices was received for this line item</inlineHelpText>
        <label>Transfer Price Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Line Items (Transfer Price Line Item)</relationshipLabel>
        <relationshipName>LineItemsTP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitCostAdjustment__c</fullName>
        <description>The unit adjustment for the product or service applied to the base cost</description>
        <inlineHelpText>The unit adjustment for the product or service applied to the base cost</inlineHelpText>
        <label>Unit Cost Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitPriceAdjustmentAuto__c</fullName>
        <description>The automatic unit adjustment for the product or service applied to the base price</description>
        <inlineHelpText>The automatic unit adjustment for the product or service applied to the base price</inlineHelpText>
        <label>Unit Price Adjustment (Auto)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitPriceAdjustmentManual__c</fullName>
        <description>The manual unit adjustment for the product or service applied to the base price</description>
        <inlineHelpText>The manual unit adjustment for the product or service applied to the base price</inlineHelpText>
        <label>Unit Price Adjustment (Manual)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Line Item</label>
    <nameField>
        <displayFormat>LI-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>